# obs-fit-selected-source

./: .dockerignore  .gitignore  CMakeLists.txt  README.ja.md  README.md
data/locale/: en-US.ini  ja-JP.ini
docker/: Dockerfile.obs-builder
scripts/: docker-build-image.sh  docker-build.sh  docker-shell.sh  package-zip.sh
src/: plugin.c
